--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,2 +1,6 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+trang:
+  name: John
+  email: ttnhdvn@gmail.com
+  password_digest: <%= User.digest('password') %>
 
